# ---  Release Notes for Carla 1.9.x  ---

1.  LADISH does not support multi-client JACK applications.
    To prevent any issues Carla will switch to single-client mode automatically.

2.  Rack mode is still a bit experimental, specially on non-JACK drivers.

3.  Carla will not work with non-native LV2 Plugin UIs that require the instance-data extension.
    This is by design and not a bug.

4.  OSC control seems to work well, but has not been tested in great detail.
    Be sure to report any issues.

5.  Carla "PRO" theme, Carla-Control and ZynAddSubFX internal plugin are not available for Windows at this point.