@@ -2,7 +2,7 @@
 
 Carla is an audio plugin host, with support for many audio drivers and plugin formats.
 It has some nice features like automation of parameters via MIDI CC and full OSC control.
-Currently supports LADSPA, DSSI, LV2, and VST plugin formats, plus GIG, SF2 and SFZ sounds banks.
+Currently supports LADSPA, DSSI, LV2, VST2/3 and AU plugin formats, plus GIG, SF2 and SFZ sounds banks.
 
 For a complete and updated description of Carla, please check:
 http://kxstudio.sourceforge.net/KXStudio:Applications:Carla
