@@ -13,8 +13,9 @@ winetricks fontsmooth=rgb
 
 # cd data/windows/python
 # msiexec /i python-3.3.5.msi /qn
-# wine PyQt4-4.10.4-gpl-Py3.3-Qt4.8.5-x32.exe
 # msiexec /i cx_Freeze-4.3.2.win32-py3.3.msi /qn
+# wine PyQt4-4.10.4-gpl-Py3.3-Qt4.8.5-x32.exe
+# wine PyQt5-5.2.1-gpl-Py3.3-Qt5.2.0-x32.exe
 # cd ../../..
 
 export WINEARCH=win64
@@ -27,6 +28,7 @@ winetricks fontsmooth=rgb
 
 # cd data/windows/python
 # msiexec /i python-3.3.5.amd64.msi /qn
-# wine PyQt4-4.10.4-gpl-Py3.3-Qt4.8.5-x64.exe
 # msiexec /i cx_Freeze-4.3.2.win-amd64-py3.3.msi /qn
+# wine PyQt4-4.10.4-gpl-Py3.3-Qt4.8.5-x64.exe
+# wine PyQt5-5.2.1-gpl-Py3.3-Qt5.2.1-x64.exe
 # cd ../../..
